# ChangeLog for net-libs/net6
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/net6/ChangeLog,v 1.5 2005/08/22 01:20:41 humpback Exp $

  22 Aug 2005; Gustavo Felisberto <humpback@gentoo.org>; -net6-1.0.1.ebuild,
  net6-1.1.0.ebuild:
  Stable on x86 and amd64

*net6-1.1.0 (14 Aug 2005)

  14 Aug 2005; Gustavo Felisberto <humpback@gentoo.org>; +net6-1.1.0.ebuild:
  Version bump.

  15 Jul 2005; Gustavo Felisberto <humpback@gentoo.org>; net6-1.0.1.ebuild:
  Keywording ~amd64

  11 Jun 2005; David Holm <dholm@gentoo.org> net6-1.0.1.ebuild:
  Added to ~ppc.

*net6-1.0.1 (11 Jun 2005)

  11 Jun 2005; Gustavo Felisberto <humpback@gentoo.org>; +metadata.xml,
  +net6-1.0.1.ebuild:
  Initial import for deps for gobby. Ebuild done by original developers.
