@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/net6
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/net6/ChangeLog,v 1.5 2005/08/22 01:20:41 humpback Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/net6/ChangeLog,v 1.6 2005/11/16 03:15:03 humpback Exp $
+
+*net6-1.2.0 (16 Nov 2005)
+
+  16 Nov 2005; Gustavo Felisberto <humpback@gentoo.org>; +net6-1.2.0.ebuild:
+  Bump to version 1.2. Arch teams please do not mark stable, I'll open a bug
+  when i think it is ready.
 
   22 Aug 2005; Gustavo Felisberto <humpback@gentoo.org>; -net6-1.0.1.ebuild,
   net6-1.1.0.ebuild:
